@@ -1,3 +1,9 @@
+JQuery-Full 1.11.2~core2
+
+	* Upgrade icheck to latest upstream version, 2.0.0.
+	* Repackage a number of components to fix a minor packaging bug.
+	-- Charlie Powell <charlie@eval.bz>  Thu, 22 Jan 2015 00:46:35 -0500
+
 JQuery-Full 1.11.2~core1
 
 	* Include jqueryUI Touch Punch by default with jQuery UI to add support for touch devices.
